Fixed links spacing in sidebar, added underline on links hover

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body {
 .sidebar-item {
 	display: flex;
 	flex-direction: column;
+    line-height: 45px;
 	width: 100%;
 	margin-top: 10%;
 	align-items: center;
@@ -30,7 +31,6 @@ body {
 .main {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
 	padding: 7% 7%;
 	font-size: 18px;
 }
@@ -47,7 +47,6 @@ body {
 }
 .sidebar-navigation {
 	font-size: 20px;
-	justify-content: space-between;
     align-items: flex-start;
 }
 .name {
@@ -66,6 +65,10 @@ body {
 .main-section a {
     color: inherit;
     text-decoration: none;
+}
+.main-section a:hover, a:active {
+    text-decoration: underline;
+    text-decoration-color: inherit;
 }
 
 @media screen and (max-width: 1000px) {
